sfdx-source/force-app/main/default/objects/Brief_Item_To_Subscription_Sync_Mapping__mdt/Brief_Item_To_Subscription_Sync_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LEM-9650: To store mapping of Brief Item fields with Subscription fields that will be updated to match when the brief item field is updated</description>
    <label>Brief Item To Subscription Sync Mapping</label>
    <pluralLabel>Brief Item To Subscription Sync Mappings</pluralLabel>
</CustomObject>