sfdx-source/force-app/main/default/objects/Brief_Item_To_Subscription_Sync_Mapping__mdt/fields/BriefItemFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>BriefItemFieldAPIName__c</fullName>
    <label>BriefItemFieldAPIName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>