sfdx-source/force-app/main/default/objects/Brief_Item_To_Subscription_Sync_Mapping__mdt/fields/ChildProductName__c.field-meta.xml
<CustomField>
    <fullName>ChildProductName__c</fullName>
    <label>ChildProductName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>