sfdx-source/force-app/main/default/objects/Brief_Item_To_Subscription_Sync_Mapping__mdt/fields/SubscriptionFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionFieldAPIName__c</fullName>
    <label>SubscriptionFieldAPIName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>