sfdx-source/force-app/main/default/objects/Brief_Item_To_Subscription_Sync_Mapping__mdt/fields/UpdateChild__c.field-meta.xml
<CustomField>
    <fullName>UpdateChild__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UpdateChild</label>
    <type>Checkbox</type>
</CustomField>