sfdx-source/force-app/main/default/objects/Brief_Item_To_Subscription_Sync_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsProtected</columns>
    <columns>BriefItemFieldAPIName__c</columns>
    <columns>SubscriptionFieldAPIName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>